--- a/src/client/app.css
+++ b/src/client/app.css
@@ -5,4 +5,41 @@ h1 {
 body {
   text-align: center;
   margin: auto;
+  font-family: sans-serif;
+}
+
+.flex-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+main {
+  display: inline-block;
+  padding: 1em;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 0.25em;
+}
+
+.loader-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.loader {
+  width: 2em;
+  height: 2em;
+  border: 0.25em solid #f3f3f3;
+  border-top: 0.25em solid #3498db;
+  border-radius: 50%;
+  margin: 0 0.5em 0 0;
+  animation: loader-spin 1s linear infinite;
+}
+
+@keyframes loader-spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
